--- a/backend/ledger-service/src/main/resources/application-dev.yml
+++ b/backend/ledger-service/src/main/resources/application-dev.yml
@@ -3,28 +3,37 @@ spring:
   config:
     activate:
       on-profile: dev
+  main:
+    allow-bean-definition-overriding: true
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/winvestco_ledger_db
-    username: postgres
-    password: postgres
+    url: jdbc:h2:mem:ledgerdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    username: sa
+    password: 
+    driver-class-name: org.h2.Driver
 
   jpa:
     hibernate:
-      ddl-auto: update
-    show-sql: false
+      ddl-auto: create-drop
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
   rabbitmq:
     host: localhost
 
   flyway:
-    repair-on-migrate: true
-    validate-on-migrate: false
+    enabled: false
 
 eureka:
   client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+    enabled: false
 
 jwt:
   secret: dev-secret-key-for-local-development-only-change-in-production-minimum-256-bits
@@ -34,6 +43,16 @@ logging:
   level:
     root: INFO
     in.winvestco.ledger_service: DEBUG
+
+management:
+  health:
+    rabbit:
+      enabled: false
+  tracing:
+    enabled: false
+  otlp:
+    tracing:
+      enabled: false
 
 server:
   port: 8087
