--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -61,6 +61,7 @@
         <module>payment-service</module>
         <module>report-service</module>
         <module>schedule-service</module>
+        <module>risk-service</module>
     </modules>
 
     <dependencyManagement>
@@ -114,6 +115,15 @@
                 <groupId>io.github.resilience4j</groupId>
                 <artifactId>resilience4j-bom</artifactId>
                 <version>${resilience4j.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!-- LangChain4j BOM -->
+            <dependency>
+                <groupId>dev.langchain4j</groupId>
+                <artifactId>langchain4j-bom</artifactId>
+                <version>0.34.0</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
