--- a/backend/schedule-service/src/main/resources/application.yml
+++ b/backend/schedule-service/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   application:
     name: schedule-service
 
+  flyway:
+    enabled: false
+
   rabbitmq:
     host: ${RABBITMQ_HOST:localhost}
     port: ${RABBITMQ_PORT:5672}
